...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
...
